[tool.poetry]
name = "python-utils"
version = "0.1.0"
description = "collection of useful function and classes"
authors = ["seekingmeanings <git-j@mail.o-family.de>"]
readme = "README.md"

packages = [
    {include = "racing"},
    {include = "config"},
#    {include = "sigleton"},
]

[tool.poetry.dependencies]
python = "^3.12"
tomlkit = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.122.3"

[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--cov=* --cov-report=term-missing"

testpaths = [
    "tests",
]