[tool.poetry]
name = "python-utils-locked"
version = "0.3.9"
description = "collection of useful function and classes"
authors = ["seekingmeanings <git-j@mail.o-family.de>"]
readme = "README.md"

packages = [
  { include = "utils_locked" }
#  { include = "racing",  to = "utils_locked" },
#  { include = "config", to = "utils_locked" },
  # {include = "singleton"},
]

[tool.poetry.dependencies]
python = "^3.11"
tomlkit = "^0.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
coverage = "^7.6.10"
pytest-cov = "^6.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.122.3"

[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=* --cov-report=term-missing"

testpaths = ["tests"]

